# msgq

./: .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  README.md  SConscript  SConstruct  __init__.py  azure-pipelines.yml  benchmark.py  build.gradle  build.py  capnp-stub-generator.patch  car.capnp  car.py  car.pyi  custom.capnp  custom.py  custom.pyi  dp.capnp  generate_javascript.sh  generate_stubs.sh  install_capnp.sh  install_dependencies.sh  lefthook.yml  legacy.capnp  legacy.py  legacy.pyi  log  log.capnp  log.py  log.pyi  logger  maptile.py  maptile.pyi  mypy.ini  pyproject.toml  requirements.txt  service_list.yaml  services.py  (+4 more)
.github/workflows/: repo.yml  stubs.yaml  tests.yml  wheels.yml
capnp-stub-generator/: README.md  pyproject.toml
capnp-stub-generator/capnp_stub_generator/: __init__.py  capnp_types.py  cli.py  helper.py  run.py  scope.py  writer.py
capnp-stub-generator/tests/: .gitignore  c.capnp  dummy.capnp  new_reference.py  test_generation.py
car/: __init__.py  car.capnp
custom/: __init__.py  __init__.pyi  custom.capnp
cython/: .gitignore  capnp_wrapper.h  car.pxd  car.pyx  car_wrapper.cc  car_wrapper.h  generator.py  setup.py
cython/test/: test_struct.py
include/: common.h  java.capnp
java/ai.flow.definitions/: .gitignore  CarDefinitions.java  Definitions.java  Legacy.java  MessageBase.java
legacy/: __init__.py  __init__.pyi  legacy.capnp
log/: __init__.py  __init__.pyi  log.capnp
logger/: logger.h
maptile/: __init__.py  maptile.capnp
messaging/: .gitignore  .msgq.cc.swn  JSONStreamer.py  Makefile  __init__.py  bridge.cc  build.gradle  demo.py  event.cc  event.h  fake_demo.cc  impl_fake.cc  impl_fake.h  impl_msgq.cc  impl_msgq.h  impl_msgq.hpp  impl_zmq.cc  impl_zmq.h  impl_zmq.hpp  messaging.cc  messaging.h  messaging.hpp  messaging.pxd  messaging_pyx.cpp  messaging_pyx.pyx  messaging_pyx_setup.py  msgq.cc  msgq.h  msgq.hpp  msgq_tests.cc  settings.gradle  socketmaster.cc  stress.py  unbridge.cc  utils.py
messaging/java/messaging/: Event.java  Factory.java  PortMap.java  Protocols.java  Service.java  Utils.java  ZMQPubHandler.java  ZMQSubHandler.java
messaging/tests/: test_fake.py  test_messaging.py  test_poller.py  test_pub_sub_master.py  test_services.py
msgq/: .gitignore  __init__.py  _ffi.py  build_cffi.py  event.cc  event.h  ffi.cc  ffi.h  ffi_internal.h  futex.cc  futex.h  impl_fake.cc  impl_fake.h  impl_msgq.cc  impl_msgq.h  impl_zmq.cc  impl_zmq.h  ipc.cc  ipc.h  ipc.pxd  ipc.py  ipc_capi.cc  ipc_cffi.cc  ipc_cffi.h  ipc_ctypes.cc  ipc_module.cc  ipc_pyx.cpp  ipc_pyx.py  ipc_pyx.pyi  ipc_pyx.pyx  messaging.cc  msgq.cc  msgq.h  msgq_tests.cc  test_runner.cc  test_runner.h
msgq/logger/: logger.cc  logger.h
msgq/tests/: test_fake.py  test_messaging.py  test_poller.py
msgq/visionipc/: __init__.py  constants.py  ffi.cc  handle_eintr.h  visionbuf.cc  visionbuf.h  visionbuf_cl.cc  visionbuf_ion.cc  visionipc.cc  visionipc.pxd  visionipc.py  visionipc_cffi.cc  visionipc_client.cc  visionipc_client.h  visionipc_ctypes.cc  visionipc_ctypes.h  visionipc_module.cc  visionipc_pyx.pxd  visionipc_pyx.py  visionipc_pyx.pyi  visionipc_pyx.pyx  visionipc_server.cc  visionipc_server.h  visionipc_tests.cc
msgq/visionipc/tests/: test_visionipc.py
resources/: services.yaml
scripts/: build_wheel.sh  install_dependencies.sh  macos_dependencies.sh  manylinux_dependencies.sh  ubuntu_dependencies.sh
visionipc/: __init__.py  cl_helpers.cc  cl_helpers.h  ipc.cc  test.cc  test_visionipc.py  visionbuf.cc  visionbuf.h  visionbuf_cl.c  visionbuf_cl.cc  visionbuf_ion.c  visionbuf_ion.cc  visionbuf_nv.cc  visionipc.h  visionipc.pxd  visionipc_client.cc  visionipc_client.h  visionipc_pyx.pyx  visionipc_server.c  visionipc_server.cc  visionipc_server.h  visionipc_tests.cc
visionipc/tests/: test_visionipc.py
