[project]
name = "msgq"
version = "0.1.0"
description = "Lock-free IPC message queue and VisionIPC"
requires-python = ">=3.11,<3.13"
license = {text = "MIT"}
authors = [{name = "comma.ai"}]
dependencies = [
  "numpy",
]

[project.optional-dependencies]
dev = [
  "setuptools", "Cython", "scons", "ruff",
  "parameterized", "coverage", "numpy",
  "pytest", "pytest-retry",
  "cppcheck", "cpplint", "codespell", "ty", "lefthook",
]

[build-system]
requires = ["setuptools", "Cython", "numpy"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"msgq" = ["*.h", "*.cc", "*.pyx", "*.pxd"]
"msgq.visionipc" = ["*.h", "*.cc", "*.pyx", "*.pxd"]
"msgq.logger" = ["*.h"]

# https://beta.ruff.rs/docs/configuration/#using-pyprojecttoml
[tool.ruff]
lint.select = ["E", "F", "W", "PIE", "C4", "ISC", "RUF100", "A"]
lint.ignore = ["W292", "E741", "E402", "C408", "ISC003"]
lint.flake8-implicit-str-concat.allow-multiline=false

line-length = 160
target-version="py311"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"pytest.main".msg = "pytest.main requires special handling that is easy to mess up!"
"unittest".msg = "Use pytest"

[tool.ty.src]
exclude = ["site_scons/"]

[tool.ty.rules]
# Cython modules are compiled at build time, not available for static analysis
unresolved-import = "ignore"

[tool.pytest.ini_options]
addopts = "--durations=10"
testpaths = [
  "msgq/tests",
  "msgq/visionipc/tests",
]
